fixed alignment

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -31,7 +31,7 @@ h2 {
 .ate {
     float: right;
     margin-right: 5%;
-    text-align: center;
+    text-align: left;
 }
 
 .want-header {
